# GroupPaint

./: .gitignore  Dockerfile  README.md
gui/paint-gui/: README.md  angular.json  package-lock.json  package.json
gui/paint-gui/src/: index.html
gui/paint-gui/src/app/: app.html  app.spec.ts  app.ts
gui/paint-gui/src/app/paint-canvas/: paint-canvas.css  paint-canvas.html  paint-canvas.spec.ts  paint-canvas.ts
service/painting_service/: Cargo.toml
service/painting_service/src/: canvas.rs  main.rs  messages.rs
