[package]
name = "painting_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
actix-web = "4"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15"