[package]
name = "painting_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
actix-web = "4"
actix-ws="0.3.0" # actors specific to web
rgb = "0.8.52"
actix = "0.10.0" # actors
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.143"
dotenv = "0.15"
